<resources>
    <!-- Add these string resources -->
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button_text">Log In</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="logo_description">App Logo</string>

    <!-- Add this string for the welcome text -->
    <string name="app_name">SwipSwap</string>
    <string name="welcome_name">Welcome To</string>
    <string name="title_activity_signup">Sign Up</string>

</resources>
